# raabta

./: .gitignore  Cleanup-Instructions.ipynb  README.md  architecture-doc.md  cleanup.py  pyproject.toml  rag-flow.drawio  rag-flow.md
agentcore_deploy/: 3.1-agentcore-deployment.ipynb  3.2-agentcore-memory.ipynb  3.3-agentcore-observability.ipynb  intelligent_rag_agent_runtime.py  intelligent_rag_agent_runtime_with_memory.py  policy.json  requirements.txt
lab1_unstructured_kb/: 1.1-prerequisites-unstructured-kb.ipynb  1.2-test-unstructured-kb.ipynb  prerequisites_unstructured_kb.py  test_unstructured_kb.py
lab2_structured_kb/: 2.1-prerequisites-structured-kb.ipynb  2.2-test-structured-kb.ipynb  prerequisites_structured_kb.py  test_structured_kb.py
sample_unstructured_data/selected_reviews/: review_1262  review_1262.metadata.json  review_1352  review_1352.metadata.json  review_1566  review_1566.metadata.json  review_1577  review_1577.metadata.json  review_1635  review_1635.metadata.json  review_1802  review_1802.metadata.json  review_1829  review_1829.metadata.json  review_2202  review_2202.metadata.json  review_2325  review_2325.metadata.json  review_2502  review_2502.metadata.json  review_252  review_252.metadata.json  review_2655  review_2655.metadata.json  review_2686  review_2686.metadata.json  review_2692  review_2692.metadata.json  review_2841  review_2841.metadata.json  review_3243  review_3243.metadata.json  review_3353  review_3353.metadata.json  review_3421  review_3421.metadata.json  (+92 more)
utils/: __init__.py  knowledge_base.py  structured_knowledge_base.py
