[project]
name = "unstructured-structured-rag-agent"
version = "0.1.0"
description = "Workshop for building intelligent RAG systems with Strands Agents"
requires-python = "==3.13.*"
dependencies = [
    "boto3",
    "botocore",
    "opensearch-py==2.7.1",
    "pydantic>=2.10.2",
    "ipython>=9.6.0",
    "ipykernel",
    "ipynbname",
    "pip",
    "pyyaml",
    "retrying",
    "requests",
    "pickleshare",
    "strands-agents>=1.13.0",
    "strands-agents-tools",
    "mcp",
    "bedrock-agentcore>=1.0.3",
    "bedrock-agentcore-starter-toolkit",
]
